# embassy-imxrt

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: check.yml  hwtest.yml  nostd.yml  rolling.yml
examples/rt633/: Cargo.toml  README.md  rt633.yaml
examples/rt685s-evk/: Cargo.toml  README.md  build.rs  link_ram_only.x  memory.x  run_tests.ps1  rust-toolchain.toml
examples/rt685s-evk-ram/: Cargo.toml  README.md  build.rs  link.ld
examples/rt685s-evk-ram/.cargo/: config.toml
examples/rt685s-evk/.cargo/: config.toml
examples/rt685s-evk/scripts/: i2cs_rpi5_host.sh
examples/rt685s-evk/src/: lib.rs
examples/rt685s-evk/src/tests/: test-gpio-blinky.rs  test-gpio-flex.rs  test-i2c-master-async.rs  test.ps1  test.sh
examples/rt685s-evk/tests/: example_test.rs
src/: adc.rs  clocks.rs  crc.rs  dma.rs  espi.rs  flash.rs  flexcomm.rs  flexspi_nor_storage_bus.rs  fmt.rs  gpio.rs  i2c.rs  iopctl.rs  lib.rs  pwm.rs  rng.rs  spi.rs  time_driver.rs  timer.rs  uart.rs  uart4.rs  uart_mod.rs  uart_setting.rs  wwdt.rs
src/chips/: mimxrt632s.rs  mimxrt633s.rs  mimxrt685s.rs
src/dma/: channel.rs  mod.rs  transfer.rs  util.rs
src/hashcrypt/: hasher.rs  mod.rs
src/i2c/: config.rs  error.rs  flexcomm.rs  i2c.rs  i2cm.rs  instance.rs  master.rs  mod.rs  slave.rs
