[package]
name = "embassy-imxrt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embassy Hardware Abstraction Layer (HAL) for the IMXRT microcontroller"
keywords = ["embedded", "async", "imxrt", "rt600", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/embassy-rs/embassy"
documentation = "https://docs.embassy.dev/embassy-imxrt"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-imxrt-v$VERSION/embassy-imxrt/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-imxrt/src/"
features = ["time", "defmt", "unstable-pac", "time-driver"]
flavors = [
    { regex_feature = "mimxrt6.*", target = "thumbv8m.main-none-eabihf" }
]

[package.metadata.docs.rs]
features = ["time", "defmt", "unstable-pac", "time-driver"]

[features]
default = ["rt"]

## Cortex-M runtime (enabled by default)
rt = [
    "mimxrt685s-pac?/rt",
    "mimxrt633s-pac?/rt",
]

## Enable [defmt support](https://docs.rs/defmt) and enables `defmt`
## debug-log messages and formatting in embassy drivers.
defmt = ["dep:defmt", "embassy-hal-internal/defmt", "embassy-sync/defmt", "mimxrt685s-pac?/defmt", "mimxrt633s-pac?/defmt"]

## Enable features requiring `embassy-time`
time = ["dep:embassy-time"]

## Enable custom embassy time-driver implementation, using 1kHz RTC
time-driver = [
    "dep:embassy-time-driver",
    "embassy-time-driver?/tick-hz-1_000",
    "dep:embassy-time-queue-utils",
]

## Reexport the PAC for the currently enabled chip at `embassy_imxrt::pac` (unstable)
unstable-pac = []

# Features starting with `_` are for internal use only. They're not intended
# to be enabled by other crates, and are not covered by semver guarantees.

_mimxrt685s = []
_mimxrt633s = ["_espi"]

# Peripherals
_espi = []

#! ### Chip selection features
## MIMXRT685S
mimxrt685s = ["mimxrt685s-pac", "_mimxrt685s"]
## MIMXRT633S
mimxrt633s = ["mimxrt633s-pac", "_mimxrt633s"]

[dependencies]
storage_bus = { git = "https://github.com/Shaibal-Microsoft/embedded-services", version = "0.1.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", features = [
    "cortex-m",
    "prio-bits-3",
] }
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
cfg-if = "1.0.0"
cortex-m-rt = ">=0.7.3,<0.8"
cortex-m = "0.7.6"
critical-section = "1.1"
chrono = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
rand_core = "0.6.4"
fixed = "1.23.1"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
mimxrt600-fcb = "0.1.0"
document-features = "0.2.7"
paste = "1.0"

# PACs
mimxrt685s-pac = { version = "0.4.0", optional = true, features = ["rt", "critical-section"] }
mimxrt633s-pac = { version = "0.4.0", optional = true, features = ["rt", "critical-section"] }

[dev-dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
static_cell = { version = "2" }
