[package]
name = "embassy-imxrt-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embassy-imxrt = { version = "0.1.0", path = "../../", features = [
    "defmt",
    "time-driver",
    "time",
] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.6.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
mimxrt600-fcb = "0.1.0"
mimxrt685s-pac = { version = "=0.1.5", features = [
    "rt",
    "critical-section",
    "defmt",
] }
rand = { version = "0.8.5", default-features = false }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }

[dev-dependencies]
embedded-test = { version = "0.5.0", features = ["embassy", "defmt"] }

[features]
embassy = ["embedded-test/embassy"]

[[test]]
name = "example_test"
harness = false

[[bin]]
name = "test-gpio-blinky"
path = "src/tests/test-gpio-blinky.rs"

[[bin]]
name = "test-gpio-flex"
path = "src/tests/test-gpio-flex.rs"

[[bin]]
name = "test-i2c-master-async"
path = "src/tests/test-i2c-master-async.rs"
